[project]
name = "mcp-server-weibo"
version = "1.0.7"
description = "A MCP Server for Weibo"
keywords = ["MCP", "Model Context Protocol", "Weibo", "Python", "Social Networks"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx",
    "mcp[cli]",
]


[project.urls]
Repository = "https://github.com/qinyuanpei/mcp-server-weibo.git"
Issues = "https://github.com/qinyuanpei/mcp-server-weibo/issues"

[project.scripts]
mcp-server-weibo = "mcp_server_weibo.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
